--- a/UkuleleShop/Login/index.html
+++ b/UkuleleShop/Login/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Login</title>
+    <title>Hung Shop</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
-    <div id="container-login" style="display: none;">
+    <div id="container-login">
         <div id="login-box">
             <h1>Login</h1>
             <div class="text-box">
@@ -24,7 +24,7 @@
             <button class="btn-outline-primary" onclick="login()">Sign in</button>
             <div class="footer-login">
                 <p onclick="displayForgotContainer()">Forgot your password!</p>
-                <button class="btn-outline-warning">Sign up</button>
+                <button class="btn-outline-warning" onclick="displayRegister()">Sign up</button>
             </div>
         </div>
         <div id="forgot-box">
@@ -45,22 +45,30 @@
             <button class="btn-outline-primary" onclick="checkForgotPassword()">Check</button>
         </div>
     </div>
-    <div id="container-register">
+    <div id="container-register" style="display: none;">
         <div id="register-box">
             <h1>Register</h1>
+            <div class="text-box">
+                <i class="fas fa-blender-phone"></i>
+                <input id="phonenumber-register" type="text" placeholder="Your phone number">
+            </div>
             <div class="text-box">
                 <i class="fas fa-user"></i>
                 <input id="username-register" type="text" placeholder="Username">
             </div>
             <div class="text-box">
                 <i class="fas fa-lock"></i>
-                <input id="password-register" type="password" placeholder="Password">
+                <input id="password-register1" type="password" placeholder="Password">
             </div>
             <div class="text-box">
                 <i class="fas fa-lock"></i>
-                <input id="password-register" type="password" placeholder="Enter password again">
+                <input id="password-register2" type="password" placeholder="Enter password again">
             </div>
-            <button class="btn-outline-primary">Sign up</button>
+            <div class="text-box" id="code-register-box">
+                <i class="fas fa-code"></i>
+                <input id="code-register" type="text" placeholder="Enter code and recheck">
+            </div>
+            <button class="btn-outline-primary" onclick="register()">Sign up</button>
         </div>
     </div>
     <script src="js.js"></script>
